course/pingpong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: main
  name: pingpong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: juslesan/pingpong
          resources:
            limits:
              cpu: "100m"
              memory: "200Mi"
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
               path: /
               port: 8080
